--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
       color: #333;
     }
 
-     .menu-btn {
+      .menu-btn {
       position: fixed;
       top: 1rem;
       right: 1rem;
@@ -38,7 +38,7 @@
     .btn-line {
       width: 100%;
       height: 4px;
-      background-color: #000;
+      background-color: #5eead4;
       transition: all 0.3s ease;
     }
 
@@ -73,7 +73,7 @@
       transform: rotate(-45deg) translate(5px, -5px);
     }
 
-      .menu a {
+    .menu a {
       color: #5eead4;
       font-size: 1.5rem;
       text-decoration: none;
@@ -164,24 +164,7 @@
       margin-top: 2rem;
     }
 
-  .menu-btn {
-  display: flex !important;
-}
-      nav.menu {
-        flex-direction: column;
-        display: none;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        right: 0;
-        z-index: 1500;
-        background-color: #fff;
-      }
 
-      nav.menu.active {
-        display: flex;
-      }
-    
   </style>
 </head>
 <body>
