--- a/index.html
+++ b/index.html
@@ -208,14 +208,24 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
     gtag('config', 'G-LVP7J1E58E');
   </script>
 </head>
+  
 
 <body>
-<!-- Toggle Button -->
-<button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
-  <div class="btn-line"></div>
-  <div class="btn-line"></div>
-  <div class="btn-line"></div>
-</button>
+
+<!-- Header with Logo + Toggle -->
+<header class="site-header">
+  <!-- Logo -->
+  <a href="index.html" class="site-logo">
+    <img src="img/logo.png" alt="Nida Mirza Logo">
+  </a>
+
+  <!-- Toggle Button -->
+  <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+    <div class="btn-line"></div>
+  </button>
+</header>
 
 <!-- Navigation -->
 <nav class="menu" id="menu">
