--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
 <header class="site-header">
   <!-- Logo -->
   <a href="index.html" class="site-logo">
-    <img src="img/logo.png" alt="Nida Mirza Logo">
+    <img src="img/projects/Portfolio Logo.png" alt="Nida Mirza Logo">
   </a>
 
   <!-- Toggle Button -->
