--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ SSSssshhhhh!! The code starts below, Enjoy!!! -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="icon" href="img/projects/Nida - DP.jpg" sizes="16x16">
+    <link rel="icon" href="img/projects/Logo Favicon.png" sizes="16x16">
     <title>Nida Mirza</title>
 </head>
 
