--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="img/projects/Logo Favicon.png" sizes="20x20">
     <title>About Me</title>
  <style>
       body {
@@ -152,12 +153,17 @@
 </head>
 
 <body>
-<!-- Toggle Button -->
-<button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
-  <div class="btn-line"></div>
-  <div class="btn-line"></div>
-  <div class="btn-line"></div>
-</button>
+<!-- Header with Logo + Toggle -->
+<header class="site-header">
+    <a href="index.html" class="site-logo">
+        <img src="img/logo.png" alt="Nida Mirza Logo">
+    </a>
+    <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+    </button>
+</header>
 
 <!-- Navigation -->
 <nav class="menu" id="menu">
