--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
 <!-- Header with Logo + Toggle -->
 <header class="site-header">
     <a href="index.html" class="site-logo">
-        <img src="img/logo.png" alt="Nida Mirza Logo">
+        <img src="img/projects/Portfolio Logo.png" alt="Nida Mirza Logo">
     </a>
     <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
         <div class="btn-line"></div>
