--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="img/projects/Portfolio Logo.png" sizes="16x16">
     <title>Nida Mirza</title>
 </head>
 
@@ -139,11 +140,20 @@
 </head>
 
 <body>
-  <button class="menu-btn" aria-label="Menu Toggle">
+<!-- Header with Logo + Toggle -->
+<header class="site-header">
+  <!-- Logo -->
+  <a href="index.html" class="site-logo">
+    <img src="img/projects/Portfolio Logo.png" alt="Nida Mirza Logo">
+  </a>
+
+  <!-- Toggle Button -->
+  <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
+</header>
 
   <nav class="menu">
     <a href="index.html">Home</a>
