--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" href="img/projects/Portfolio Logo.png" sizes="16x16">
     <title>Contact Me</title>
 </head>
 
@@ -199,11 +200,20 @@
 </head>
 
 <body>
- <button class="menu-btn" aria-label="Menu Toggle">
+<!-- Header with Logo + Toggle -->
+<header class="site-header">
+  <!-- Logo -->
+  <a href="index.html" class="site-logo">
+    <img src="img/projects/Portfolio Logo.png" alt="Nida Mirza Logo">
+  </a>
+
+  <!-- Toggle Button -->
+  <button class="menu-btn" id="menu-btn" aria-label="Menu Toggle">
     <div class="btn-line"></div>
     <div class="btn-line"></div>
     <div class="btn-line"></div>
   </button>
+</header>
 
   <nav class="menu">
     <a href="index.html">Home</a>
