--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="icon" href="img/projects/Portfolio Logo.png" sizes="16x16">
+    <link rel="icon" href="img/projects/Logo Favicon.png" sizes="20x20">
     <title>Projects</title>
 </head>
 
