--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link rel="icon" href="img/projects/Portfolio Logo.png" sizes="16x16">
+    <link rel="icon" href="img/projects/Logo Favicon.png" sizes="20x20">
     <title>Contact Me</title>
 </head>
 
