--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@
   <nav class="menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="work.html">Projects</a>
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
